	added informix connection module
	added shutdown loop detection in sqlr-listener
	fixed dbhostname/dbipaddress requests
	added bind variable format validation to php pdo driver
	added softttl parameter
	added db/api detection to configure.vbs
	added passwordfunction parameter to "sqlrelay" authentication module
	added -disable-crash-handler command line option to server processes

0.63.1 - backported shutdown loop detection

0.63 - suppressed ruby configure warning
	fixed glib detection if pkg-config isn't present
	fixed mono detection on freebsd
	fixed node.js yes/no misreport bug in configure script
	added freetds tcl test
	fixed slashes in tcl tests for windows
	updated docs to mention firebird buffer size parameters
	updated MAX_ITEM_BUFFER_SIZE to 32768 for firebird
	fixed ruby detection on fedora 22
	fixed missing export for setAuth/ResponseTimeout in ruby api
	added manual include of inttypes.h in php api to work around issue with
		define/undef games, revealed on openbsd 5.7
	tweaked ruby cflags script for debian 8
	refactored mysql detection
	tweaked unixodbc detection to also look in /usr/include/odbc
	renamed "oracle8" connection plugin to "oracle"
	renamed "sybase" connection plugin to "sap"
	updated identity tests in api's/cmdline clients to use
		charstring::contains() rather than !charstring::compare()
	implemented missing destructors for ADO.NET Data Provider

0.62 - added query filter plugin framework
	added regex, string and pattern filters
	added normalization translation
	added reformatdatetime result set translation
	fixed error in sqlrconfigfile class that could cause sqlr-start to
		crash if one instance defines addresses but the next doesn't
	added query status flag to sqlrservercursor
	tweaked odbc driver's SQLGetTypeInfo()
	field name is passed into runResultSetTranslations() now
	added support for maxitembuffersize, maxselectlistsize,
		and maxbindcount for firebird
	added native api for node.js